--- a/roles/awx_export_secrets/tasks/credential_secrets.yml
+++ b/roles/awx_export_secrets/tasks/credential_secrets.yml
@@ -14,11 +14,12 @@
     credentials: all
   delegate_to: localhost
   register: export_data
-    #  no_log: true
+  no_log: true
 
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_credentialtype;\""
   register: awx_export_secrets_database_query_credential_type
+  no_log: true
 
 - set_fact:
     awx_export_secrets_credential_table: "{{ awx_export_secrets_credential_table | default({}) | combine( { item.split('|')[0] : item.split('|')[1] } ) }}"
@@ -57,7 +58,7 @@
       create: true
       state: present
     delegate_to: localhost
-      #    no_log: true
+    no_log: true
 
   - name: Encrypt Credentials File
     command: "ansible-vault encrypt --vault-password-file {{ awx_export_secrets_temp_folder.path }}/vault_password {{ awx_export_secrets_temp_folder.path }}/process.json"
@@ -69,7 +70,6 @@
       src: "{{ awx_export_secrets_temp_folder.path }}/process.json"
       dest: "{{ awx_export_secrets_export_path }}/credentials.json"
       decrypt: false
-        #      remote_src: true
     delegate_to: "{{ awx_export_file_host }}"
     remote_user: "{{ awx_export_file_user }}"
 
