--- a/roles/awx_export_secrets/tasks/notification_secrets.yml
+++ b/roles/awx_export_secrets/tasks/notification_secrets.yml
@@ -10,14 +10,16 @@
     tower_host: "{{ inventory_hostname }}"
     tower_password: "{{ awx_export_secrets_password }}"
     tower_username: "{{ awx_export_secrets_user }}"
+    validate_certs: false
     notification_templates: all
   delegate_to: localhost
   register: export_data
-    #no_log: true
+  no_log: true
 
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_organization;\""
   register: awx_export_secrets_database_query_organizations
+  no_log: true
 
 - set_fact:
     awx_export_secrets_organization_table: "{{ awx_export_secrets_organization_table | default({}) | combine( { item.split('|')[0] : item.split('|')[1] } ) }}"
@@ -67,8 +69,9 @@
     ansible.builtin.copy:
       src: "{{ awx_export_secrets_temp_folder.path }}/process.json"
       dest: "{{ awx_export_secrets_export_path }}/notification_templates.json"
-      remote_src: true
-    delegate_to: localhost
+      decrypt: false
+    delegate_to: "{{ awx_export_file_host }}"
+    remote_user: "{{ awx_export_file_user }}"
 
   always:
   - name: Remove Temporary Working Directory
