--- a/roles/awx_export_objects/tasks/export_credential_types.yml
+++ b/roles/awx_export_objects/tasks/export_credential_types.yml
@@ -13,6 +13,8 @@
   ansible.builtin.copy:
     dest: "{{ awx_export_objects_export_path }}/{{ awx_export_objects_object }}.json"
     content: "{{ awx_export_objects_export_data.assets |to_json }}"
-  delegate_to: localhost
+  delegate_to: "{{ awx_export_file_host }}"
+  remote_user: "{{ awx_export_file_user }}"
+
   no_log: true
 ...
