--- a/roles/awx_export_secrets/tasks/process_notification_secret.yml
+++ b/roles/awx_export_secrets/tasks/process_notification_secret.yml
@@ -8,6 +8,7 @@
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select id,notification_configuration from main_notificationtemplate WHERE name = '{{ awx_export_secrets_query_object_name }}' and organization_id = '{{ awx_export_secrets_organization_table[awx_export_secrets_notification_template_object.organization.name] }}';\""
   register: awx_export_secrets_database_query
+  no_log: true
 
 - name: Process AWX Credential List
   awxnotificationsecret:
