--- a/roles/awx_export_secrets/tasks/notification_secrets.yml
+++ b/roles/awx_export_secrets/tasks/notification_secrets.yml
@@ -14,12 +14,12 @@
     notification_templates: all
   delegate_to: localhost
   register: export_data
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_organization;\""
   register: awx_export_secrets_database_query_organizations
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - set_fact:
     awx_export_secrets_organization_table: "{{ awx_export_secrets_organization_table | default({}) | combine( { item.split('|')[0] : item.split('|')[1] } ) }}"
@@ -34,7 +34,7 @@
   set_fact:
     file_content:
       notification_templates: "{{ awx_export_secrets_notification_templates_list }}"
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - block:
   - name: Create Temporary Working Directory
@@ -49,7 +49,7 @@
       dest: "{{ awx_export_secrets_temp_folder.path }}/process.json"
       content: "{{ file_content |to_nice_json(indent=4) }}"
     delegate_to: localhost
-    no_log: true
+    no_log: "{{ no_log_var }}"
 
   - name: Generate Vault Passwort File
     ansible.builtin.lineinfile:
@@ -58,12 +58,12 @@
       create: true
       state: present
     delegate_to: localhost
-    no_log: true
+    no_log: "{{ no_log_var }}"
 
   - name: Encrypt Notification Template File
     command: "ansible-vault encrypt --vault-password-file {{ awx_export_secrets_temp_folder.path }}/vault_password {{ awx_export_secrets_temp_folder.path }}/process.json"
     delegate_to: localhost
-    no_log: true
+    no_log: "{{ no_log_var }}"
 
   - name: Copy Final File to Destination
     ansible.builtin.copy:
