--- a/roles/awx_export_secrets/tasks/process_notification_secret.yml
+++ b/roles/awx_export_secrets/tasks/process_notification_secret.yml
@@ -8,7 +8,7 @@
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select id,notification_configuration from main_notificationtemplate WHERE name = '{{ awx_export_secrets_query_object_name }}' and organization_id = '{{ awx_export_secrets_organization_table[awx_export_secrets_notification_template_object.organization.name] }}';\""
   register: awx_export_secrets_database_query
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - name: Process AWX Credential List
   awxnotificationsecret:
@@ -21,4 +21,4 @@
 - name: Append Credential to List
   set_fact:
     awx_export_secrets_notification_templates_list: "{{ awx_export_secrets_notification_templates_list + [awx_export_secrets_plugin['result']] }}"
-  no_log: true
+  no_log: "{{ no_log_var }}"
