--- a/roles/ansible_automation_platform_awx_import/tasks/credentials.yml
+++ b/roles/ansible_automation_platform_awx_import/tasks/credentials.yml
@@ -15,13 +15,13 @@
       create: true
       state: present
     delegate_to: localhost
-    no_log: true
+    no_log: "{{ no_log_var }}"
 
 
   - name: Decrypt Credentials Asset
     ansible.builtin.command: "ansible-vault decrypt {{ __ansible_automation_platform_awx_import_assets_path }}/credentials.json --output {{ awx_import_secrets_temp_folder.path }}/credentials.json --vault-password-file {{ awx_import_secrets_temp_folder.path }}/key"
     delegate_to: localhost
-    #no_log: true
+    #no_log: "{{ no_log_var }}"
 
   - name: Import Credentials Assets
     set_fact:
@@ -41,7 +41,7 @@
   loop_control:
     loop_var: tower_check
   when: "tower_check.credential_type.name == 'Ansible Tower'"
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - name: Add Credentials
   ansible.controller.credential:
@@ -63,5 +63,5 @@
   loop: "{{ ansible_automation_platform_awx_import_credentials.credentials }}"
   loop_control:
     loop_var: __controller_credentials_item
-  no_log: true
+  no_log: "{{ no_log_var }}"
 ...
