--- a/roles/awx_export_objects/tasks/export_credential_types.yml
+++ b/roles/awx_export_objects/tasks/export_credential_types.yml
@@ -7,7 +7,7 @@
     validate_certs: false
     credential_types: all
   register: awx_export_objects_export_data
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - name: Write Data to File
   ansible.builtin.copy:
@@ -16,5 +16,5 @@
   delegate_to: "{{ awx_export_file_host }}"
   remote_user: "{{ awx_export_file_user }}"
 
-  no_log: true
+  no_log: "{{ no_log_var }}"
 ...
