--- a/roles/awx_export_secrets/tasks/process_secret.yml
+++ b/roles/awx_export_secrets/tasks/process_secret.yml
@@ -8,7 +8,7 @@
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select * from main_credential WHERE name = '{{ awx_export_secrets_query_object_name }}' and credential_type_id = '{{ awx_export_secrets_credential_table[awx_export_secrets_credential_object.credential_type.name] }}';\""
   register: awx_export_secrets_database_query
-  no_log: true
+  no_log: "{{ no_log_var }}"
     
 - name: Process AWX Credential List
   awxsecret:
@@ -17,9 +17,9 @@
     credential: "'{{ awx_export_secrets_credential_object }}'"
     secret: "{{ awx_export_secrets_tower_secret }}"
   register: awx_export_secrets_plugin
-  no_log: true
+  no_log: "{{ no_log_var }}"
 
 - name: Append Credential to List
   set_fact:
     awx_export_secrets_credentials_list: "{{ awx_export_secrets_credentials_list + [awx_export_secrets_plugin['result']] }}"
-  no_log: true
+  no_log: "{{ no_log_var }}"
