--- a/roles/awx_export_secrets/defaults/main.yml
+++ b/roles/awx_export_secrets/defaults/main.yml
@@ -18,6 +18,9 @@ awx_export_secrets_database_user: "{{ vault_awx_export_secrets_database_user }}"
 
 # awx database password
 awx_export_secrets_database_password: "{{ vault_awx_export_secrets_database_password }}"
+# tower remote database vars
+awx_export_secrets_remote_db_host: "{{ vault_awx_export_secrets_remote_db_host }}"
+awx_export_secrets_remote_db_port: "{{ vault_awx_export_secrets_remote_db_port }}"
 
 # AWX Secret to decrypt credentials and notification templates. This can be found in /etc/tower/SECRET_KEY inside of the awx_task container.
 awx_export_secrets_tower_secret: "{{ vault_awx_export_secrets_tower_secret }}"
