--- a/roles/awx_export_secrets/tasks/credential_secrets.yml
+++ b/roles/awx_export_secrets/tasks/credential_secrets.yml
@@ -17,7 +17,7 @@
   no_log: "{{ no_log_var }}"
 
 - name: Run AWX Database Query
-  shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_credentialtype;\""
+  shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -h {{ awx_export_secrets_remote_db_host }} -p {{ awx_export_secrets_remote_db_port }} -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_credentialtype;\""
   register: awx_export_secrets_database_query_credential_type
   no_log: "{{ no_log_var }}"
 
