--- a/roles/awx_export_secrets/tasks/process_notification_secret.yml
+++ b/roles/awx_export_secrets/tasks/process_notification_secret.yml
@@ -6,7 +6,7 @@
     awx_export_secrets_query_object_name: "{{ awx_export_secrets_notification_template_object.name |replace(\"'\",\"''\") }}"
 
 - name: Run AWX Database Query
-  shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select id,notification_configuration from main_notificationtemplate WHERE name = '{{ awx_export_secrets_query_object_name }}' and organization_id = '{{ awx_export_secrets_organization_table[awx_export_secrets_notification_template_object.organization.name] }}';\""
+  shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -h {{ awx_export_secrets_remote_db_host }} -p {{ awx_export_secrets_remote_db_port }} -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select id,notification_configuration from main_notificationtemplate WHERE name = '{{ awx_export_secrets_query_object_name }}' and organization_id = '{{ awx_export_secrets_organization_table[awx_export_secrets_notification_template_object.organization.name] }}';\""
   register: awx_export_secrets_database_query
   no_log: "{{ no_log_var }}"
 
