--- a/roles/awx_export_objects/tasks/export_organizations.yml
+++ b/roles/awx_export_objects/tasks/export_organizations.yml
@@ -7,6 +7,7 @@
     validate_certs: false
     organizations: all
   register: awx_export_objects_export_data
+  delegate_to: localhost
   no_log: "{{ no_log_var }}"
 
 - name: Write Data to File
