updated the task names for easier watching

--- a/roles/awx_export_objects/tasks/export_credential_types.yml
+++ b/roles/awx_export_objects/tasks/export_credential_types.yml
@@ -10,12 +10,11 @@
   delegate_to: localhost
   no_log: "{{ no_log_var }}"
 
-- name: Write Data to File
+- name: "Write {{ awx_export_objects_object }} Data to File"
   ansible.builtin.copy:
     dest: "{{ awx_export_objects_export_path }}/{{ awx_export_objects_object }}.json"
     content: "{{ awx_export_objects_export_data.assets |to_json }}"
   delegate_to: "{{ awx_export_file_host }}"
   remote_user: "{{ awx_export_file_user }}"
-
   no_log: "{{ no_log_var }}"
 ...
