--- a/vars/auth.yml
+++ b/vars/auth.yml
@@ -5,3 +5,5 @@ controller_password: "{{ vault_controller_password }}"
 controller_validate_certs: false
 controller_request_timeout: 60
 awx_export_path: "{{ vault_awx_export_path }}"
+awx_export_file_host: "{{ vault_awx_export_file_host }}"
+awx_export_file_user: "{{ vault_awx_export_file_user }}"
