--- a/roles/awx_export_secrets/tasks/credential_secrets.yml
+++ b/roles/awx_export_secrets/tasks/credential_secrets.yml
@@ -20,6 +20,13 @@
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -h {{ awx_export_secrets_remote_db_host }} -p {{ awx_export_secrets_remote_db_port }} -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_credentialtype;\""
   register: awx_export_secrets_database_query_credential_type
   no_log: "{{ no_log_var }}"
+  when: !awx_export_secrets_all_in_one 
+
+- name: Run AWX Database Query
+  shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_credentialtype;\""
+  register: awx_export_secrets_database_query_credential_type
+  no_log: "{{ no_log_var }}"
+  when: awx_export_secrets_all_in_one 
 
 - set_fact:
     awx_export_secrets_credential_table: "{{ awx_export_secrets_credential_table | default({}) | combine( { item.split('|')[0] : item.split('|')[1] } ) }}"
