Updated linter rules

--- a/roles/awx_export_secrets/tasks/notification_secrets.yml
+++ b/roles/awx_export_secrets/tasks/notification_secrets.yml
@@ -20,7 +20,7 @@
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -h {{ awx_export_secrets_remote_db_host }} -p {{ awx_export_secrets_remote_db_port }} -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_organization;\""
   register: awx_export_secrets_database_query_organizations
   no_log: "{{ no_log_var }}"
-  when: !awx_export_secrets_all_in_one 
+  when: not awx_export_secrets_all_in_one
 
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select name,id from main_organization;\""
