--- a/roles/awx_export_secrets/tasks/process_notification_secret.yml
+++ b/roles/awx_export_secrets/tasks/process_notification_secret.yml
@@ -9,7 +9,7 @@
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -h {{ awx_export_secrets_remote_db_host }} -p {{ awx_export_secrets_remote_db_port }} -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select id,notification_configuration from main_notificationtemplate WHERE name = '{{ awx_export_secrets_query_object_name }}' and organization_id = '{{ awx_export_secrets_organization_table[awx_export_secrets_notification_template_object.organization.name] }}';\""
   register: awx_export_secrets_database_query
   no_log: "{{ no_log_var }}"
-  when: !awx_export_secrets_all_in_one
+  when: not awx_export_secrets_all_in_one
 
 - name: Run AWX Database Query
   shell: "PGPASSWORD={{ awx_export_secrets_database_password }} psql -h {{ awx_export_secrets_remote_db_host }} -p {{ awx_export_secrets_remote_db_port }} -t -A -U {{ awx_export_secrets_database_user }} -d {{ awx_export_secrets_database_name }} -c \"select id,notification_configuration from main_notificationtemplate WHERE name = '{{ awx_export_secrets_query_object_name }}' and organization_id = '{{ awx_export_secrets_organization_table[awx_export_secrets_notification_template_object.organization.name] }}';\""
